--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,30 @@
   "compilerOptions": {
     "sourceMap": true,
     "outDir": "./dist/",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "module": "es6",
     "target": "es5",
-    "jsx": "react",
+    //"jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    
+    //"allowSyntheticDefaultImports": true,
+    
+    // "rootDir": "src",
+    // "outDir": "dist",
+    // "target": "es2015",
+    // "module": "es2015",
+    // "moduleResolution": "node",
+    // "noImplicitAny": true,
+    // "noImplicitReturns": true,
+    // "noImplicitThis": true,
+    // "allowSyntheticDefaultImports": true,
+    // "removeComments": true,
+    // "sourceMap": true,
+    
+
+
+  
   }
 }
