--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.6.0",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-jquery-ui": "^2.0.1"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start":  "webpack serve",
     "build": "webpack"
   },
   "author": "",
