--- a/package.json
+++ b/package.json
@@ -22,12 +22,24 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-preset-env": "^1.7.0",
+    "chai": "^4.3.4",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
+    "karma": "^6.3.2",
+    "karma-chai": "^0.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-webpack": "^5.0.0",
     "mini-css-extract-plugin": "^1.4.0",
+    "mocha": "^8.3.2",
     "node-sass": "^5.0.0",
+    "phantomjs-prebuilt": "^2.1.16",
     "sass-loader": "^11.0.1",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.2",
@@ -35,9 +47,11 @@
     "webpack-cli": "^4.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":  "webpack serve",
-    "build": "webpack"
+   
+    "start": "webpack serve",
+    "build": "webpack",
+    "test:single": "rm -rf tmp/ && karma start karma.conf.js --single-run --browsers PhantomJS",
+    "test:watch": "karma start karma.conf.js --browsers PhantomJS"
   },
   "author": "",
   "license": "ISC"
